이름 바꾸고 자잘한 것 수정
아직 푸시 해제가 안 됨 (기기 문제 같음)
xml에서 경고가 없도록 스트링 리소스로 다 바꿈
여러 경고문구 수정과 내 메일 주소 첨부

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SNUJub</string>
+    <string name="app_name">SNUJoop</string>
     <string name="title_activity_login">로그인</string>
     <string name="title_activity_register">회원가입</string>
     <string name="title_activity_find_subject">강좌 검색</string>
@@ -13,5 +13,6 @@
     <string name="hint_student_number">20xx-xxxxx</string>
     <string name="hint_password">password</string>
     <string name="hint_password_confirm">password confirm</string>
+    <string name="developer">Leeingnyo (SNUCSE14)\nglglgozz@wafflestudio.com</string>
 
 </resources>
