--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">SNUJoob</string>
     <string name="action_settings">Settings</string>
+    <string name="login">로그인</string>
+    <string name="auto_login">기억하기</string>
+    <string name="join">회원가입</string>
 </resources>
