separate search activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="login">로그인</string>
     <string name="auto_login">기억하기</string>
     <string name="join">회원가입</string>
+    <string name="search">검색</string>
 </resources>
